# apex-project2-bits

./: README.md  main.py  pyproject.toml  skill.md
.antigravitycli/: a09a00fb-5d73-45e4-b655-0482678882e8.json
backup/old_dataset/: Employee_Dataset_Retail_OLD.csv
resources/Week5/: Apex2_Week5_Progress_Template.docx  week2SbumissionNotification.txt  week5_liveClass_transcript.txt
resources/week2/: Apex2_Week2_Notebook_Template1.ipynb  Retail_Attrition_Assignment.ipynb
resources/week3/: week3_live_class_transcript.txt
resources/week4/: week4_liveClass_transcript.txt
submission/: 2025EM1100026_AnikDas_Week2_Notebook.ipynb  2025EM1100026_AnikDas_Week2_Outline.docx  2025EM1100026_AnikDas_Week5_Notebook.ipynb  2025EM1100026_Anik_Das_week2_feedback.txt  Employee_Dataset_Retail.csv
