[project]
name = "apex-project2-bits"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
